# meminfo

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
client/src/model/: mod.rs  overview.rs
client/src/readinfo/: mod.rs
client/src/ui/: app.rs  dispatch.rs  icon.rs  mod.rs  no_root_dialog.rs  overview.rs  stacked_bar.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  proc_page.rs
src/: main.rs
src/model/: overview.rs
src/readinfo/: mod.rs
src/ui/: about.rs  app.rs  icon.rs  mod.rs  overview.rs
