[package]
name = "meminfo"
version = "0.1.0"
authors = ["Felix Gohla"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib-sys = "^0"
glib = "^0"
gio = "^0"
gtk = "^0"
gdk = "^0"
gdk-pixbuf = "^0"
cairo-rs = "^0"

procfs = "0.9.1"

rand = {version = "0.8.3", features = ["small_rng"]}
