[package]
name = "meminfo-server"
version = "0.1.0"
authors = ["Felix Gohla"]
edition = "2018"

[dependencies]
bitflags = "1.2.1"
bytesize = "1.0.1"
caps = "0.5.1"
futures = "0.3.12"
nix = "0.20.0"
procfs = "0.9.1"
safe-transmute = "0.11.1"
users = "0.11.0"
zbus = "1.8.0"
zbus_polkit = "1.2.0"
zvariant = "2.5.0"

rand = {version = "0.8.3", features = ["small_rng"]}

[profile.release]
debug = true
